RESOLVED FIXED259552
Runtime reachability of IPC endpoints should be defined within the .messages.in files
https://bugs.webkit.org/show_bug.cgi?id=259552
Summary Runtime reachability of IPC endpoints should be defined within the .messages....
Gavin
Reported 2023-07-27 05:28:37 PDT
Runtime reachability of IPC endpoints should be defined within the .messages.in files
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-27 05:29:30 PDT
Gavin
Comment 2 2023-07-27 05:37:20 PDT
EWS
Comment 3 2023-08-17 14:35:12 PDT
Committed 267014@main (35edbfdbf97e): <https://commits.webkit.org/267014@main> Reviewed commits have been landed. Closing PR #16135 and removing active labels.
Chris Dumez
Comment 4 2023-09-08 10:48:27 PDT
This is causing some crashes (rdar://114245301) in debug. It'd be good to hold off on deploying this further until we've addressed the root cause.
Fujii Hironori
Comment 5 2023-10-05 00:56:38 PDT
Regressed: Bug 262401 – REGRESSION ( Sonoma?): [ Sonoma debug wk2 ] ASSERTION FAILED: Unhandled message GPUConnectionToWebProcess_ReleaseGraphicsContextGL to 0 Bug 262681 – REGRESSION(267014@main): "ASSERTION FAILED: Unhandled message GPUConnectionToWebProcess_ReleaseGraphicsContextGL to 0" for fast/canvas/webgl/canvas-webgl-page-cache.html
Note You need to log in before you can comment on or make changes to this bug.