Source/WebKit/Scripts/webkit/messages_unittest.py
@@ -52,6 +52,7 @@ _test_receiver_names = [
     'TestWithStreamBuffer',
     'TestWithCVPixelBuffer',
     'TestWithStreamServerConnectionHandle',
+    'TestWithEnabledIf',
 ]
 
 
